Update the Flock site with Nest CfP information.
Fixes #1043

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -62,9 +62,9 @@
             <strong>The <a href="https://flock2019.sched.com">Flock 2019 schedule</a> is now available!</strong>
           </p>
           -->
-          <!--
+
           <h2>Event Dates</h2>
-          <p>Flock will begin the morning of Thursday, August 6. Sessions will continue each day until Sunday, August 9. You should plan to arrive by Wednesday, August 5 and to depart no sooner than Sunday afternoon for the best experience.</p>
+          <p>Nest will begin the morning of Friday, August 7. Sessions will continue each day until Sunday, August 9. <!--You should plan to arrive by Wednesday, August 5 and to depart no sooner than Sunday afternoon for the best experience.--></p>
 
           <table class="calendar">
               <tr>
@@ -80,19 +80,20 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="flock" colspan="4">Flock</td>
+                <td></td>
+                <td class="flock" colspan="3">Nest</td>
               </tr>
               <tr>
                 <td>Aug <span>3</span></td>
                 <td>Aug <span>4</span></td>
                 <td>Aug <span>5</span></td>
-                <td class="flock">Aug <span>6</span></td>
+                <td>Aug <span>6</span></td>
                 <td class="flock">Aug <span>7</span></td>
                 <td class="flock">Aug <span>8</span></td>
                 <td class="flock">Aug <span>9</span></td>
               </tr>
             </table>
-            -->
+
 
 <!--
             <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
@@ -117,9 +118,54 @@
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-            <h2>Call for Ideas</h2>
+            <h2>Call for Participation</h2>
+            <p>This year we are holding Nest with Fedora as a virtual replacement for our normal Flock to Fedora contributor conference. We are taking submissions in the <a href="https://pagure.io/flock/">Flock Pagure repository</a>.</p>
 
-	      <p>Submit your ideas for Nest With Fedora in the <a href="https://pagure.io/flock/">Flock Pagure repository</a>.</p>
+            <p>As we are able to record all of our content very easily this year, try to think about storytelling when you submit your papers. What kind of story can you tell about your team, project, initiative, or the overall community?</p>
+
+            <h3>Examples</h3>
+            <p>“At Fedora’s contributor conference, Nest with Fedora, the Fedora Design team closed 10 tickets, updated their wiki/docs page, and came up with a strategy for the next year.”</p>
+
+            <p>“At Fedora’s contributor conference, Nest with Fedora, we had 000 participants show up with their pets!” (Social hour, bring your pet! Gather pet photos and create an album to go along with that story)</p>
+
+            <p>As we are able to meet with our teams on a regular basis online, try to focus work sessions on strategy and plenary work for the upcoming year.</p>
+
+            <h3>Tracks</h3>
+            <p>Nest with Fedora has five tracks. They are listed below with example submissions.</p>
+
+            <ul class="non-jumbo text-left">
+                <li><strong>General Ideas</strong><ul>
+                    <li>Keynotes</li>
+                    <li>Team meetings</li>
+                    <li>Panel sessions</li>
+                </ul></li>
+                <li><strong>Ask the Experts</strong><ul>
+                    <li>Live sessions with experts and moderators taking questions (ex. IoT, editions, modularity, design)</li>
+                </ul></li>
+                <li><strong>Community</strong><ul>
+                    <li>Themed social hours (ex. bring your pet, costume party)</li>
+                    <li>Diversity themed sessions (ex. cooking across the world, how do you Fedora?)</li>
+                </ul></li>
+                <li><strong>Games</strong><ul>
+                    <li>Gaming SIG session</li>
+                    <li>Interactive game sessions (ex. Virtual Pictionary, bingo, trivia)</li>
+                    <li>Nintendo Switch meetup and Friend code exchange</li>
+                    <li>Asynchronous game sessions (ex. Minecraft)</li>
+                </ul></li>
+                <li><strong>Hackfests/Workshops</strong><ul>
+                    <li>Team work sessions</li>
+                    <li>Project hackfests</li>
+                </ul></li>
+            </ul>
+
+            <h3>Submission deadline</h3>
+            <p>We will do a rolling deadline this year again with two acceptance dates.</p>
+            <ul class="non-jumbo text-left">
+                <li>Monday 20 July 2020</li>
+                <li>Monday 27 July 2020</li>
+            </ul>
+
+<!--	      <p>Submit your ideas for Nest With Fedora in the <a href="https://pagure.io/flock/">Flock Pagure repository</a>.</p>-->
  <!--
             <p>The CfP is now closed and the <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
             <p>We invite you to submit proposals for talks (25/50 minutes) or workshops( 2 hours),  or hackfests/FADs (half or full day) on topics of importance to the contributor community.</p>
@@ -246,7 +292,7 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Venue and Hotel</h2>
 
-	  <p>Coming soon...</p>
+	  <p>Nest With Fedora will be held on an online platform. Details and registration to come.</p>
 <!--
           <div class="col-xs-12 col-md-7">
       <p><a href="https://www.danubiushotels.com/helia">The Danubius Hotel HELIA</a> in Budapest, Hungary is both the conference venue as well as the conference hotel.</p>
