The CfP window is closed

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -119,21 +119,21 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
             <h2>Call for Participation</h2>
-            <p>This year we are holding Nest with Fedora as a virtual replacement for our normal Flock to Fedora contributor conference. We are taking submissions in the <a href="https://pagure.io/flock/">Flock Pagure repository</a>.</p>
+<!--             <p>This year we are holding Nest with Fedora as a virtual replacement for our normal Flock to Fedora contributor conference. We are taking submissions in the <a href="https://pagure.io/flock/">Flock Pagure repository</a>.</p> -->
 
-            <p>As we are able to record all of our content very easily this year, try to think about storytelling when you submit your papers. What kind of story can you tell about your team, project, initiative, or the overall community?</p>
+<!--             <p>As we are able to record all of our content very easily this year, try to think about storytelling when you submit your papers. What kind of story can you tell about your team, project, initiative, or the overall community?</p> -->
 
-            <h3>Examples</h3>
-            <p>“At Fedora’s contributor conference, Nest with Fedora, the Fedora Design team closed 10 tickets, updated their wiki/docs page, and came up with a strategy for the next year.”</p>
+<!--             <h3>Examples</h3> -->
+<!--             <p>“At Fedora’s contributor conference, Nest with Fedora, the Fedora Design team closed 10 tickets, updated their wiki/docs page, and came up with a strategy for the next year.”</p> -->
 
-            <p>“At Fedora’s contributor conference, Nest with Fedora, we had 000 participants show up with their pets!” (Social hour, bring your pet! Gather pet photos and create an album to go along with that story)</p>
+<!--             <p>“At Fedora’s contributor conference, Nest with Fedora, we had 000 participants show up with their pets!” (Social hour, bring your pet! Gather pet photos and create an album to go along with that story)</p> -->
 
-            <p>As we are able to meet with our teams on a regular basis online, try to focus work sessions on strategy and plenary work for the upcoming year.</p>
+<!--             <p>As we are able to meet with our teams on a regular basis online, try to focus work sessions on strategy and plenary work for the upcoming year.</p> -->
 
-            <h3>Tracks</h3>
-            <p>Nest with Fedora has five tracks. They are listed below with example submissions.</p>
+<!--             <h3>Tracks</h3> -->
+<!--             <p>Nest with Fedora has five tracks. They are listed below with example submissions.</p> -->
 
-            <ul class="non-jumbo text-left">
+<!--            <ul class="non-jumbo text-left">
                 <li><strong>General Ideas</strong><ul>
                     <li>Keynotes</li>
                     <li>Team meetings</li>
@@ -156,14 +156,15 @@
                     <li>Team work sessions</li>
                     <li>Project hackfests</li>
                 </ul></li>
-            </ul>
+            </ul>-->
 
             <h3>Submission deadline</h3>
-            <p>We will do a rolling deadline this year again with two acceptance dates.</p>
+            <p>The submission deadline has passed.</p>
+<!--            <p>We will do a rolling deadline this year again with two acceptance dates.</p>
             <ul class="non-jumbo text-left">
                 <li>Monday 20 July 2020</li>
                 <li>Monday 27 July 2020</li>
-            </ul>
+            </ul>-->
 
 <!--	      <p>Submit your ideas for Nest With Fedora in the <a href="https://pagure.io/flock/">Flock Pagure repository</a>.</p>-->
  <!--
