Add ASF as a sponsor since we are using their Hopin instance

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -372,14 +372,9 @@
           <p>
             <a href="https://www.datto.com/"><img src="../../static/images/sponsors/Datto-blue-RGB.png"/></a>
           </p>
-<!--
           <p>
-            <a href="https://www.arm.com/"><img src="../../static/images/Arm_logo_blue_150MN.png"/></a>
+            <a href="https://www.apache.org/"><img src="../../static/images/sponsors/apache-software-foundation.png"/></a>
           </p>
-          <p>
-            <a href="https://developer.capitalone.com/open-source/"><img src="../../static/images/capitalone-devexchange.png"/></a>
-          </p>
--->
         </div>
       </div>
       </div>
