--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -197,23 +197,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Registration Information</h2>
-	  <p>Coming soon...</p>
-<!--
-          <p><mark>Late Registration for Flock is still open.</mark>  You may also register on-site.  Late registrants are not guranteed all benefits of registration including swag and food.  These will provided if we have capacity.  This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now.</p>
-          <p>We are no longer issuing visa letters as the event is less than one month away.</p>
-
-          <p><mark>Registration for Flock is open.</mark></p>
-          <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2019-tickets-55502933769">Flock 2019 event</a> online now. If you need or think you will need a visa letter to attend Flock, please complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLSexQqHA9gN-KuxT6GAxqN-jt3OXRXThh9qREIkowFLUZ0G7tA/viewform">Event Visa Invitation Letter Request Form</a>. Letters can be requested until 1 month before the event.</p>
-          <p>Flock 2019 will, again, feature a small optional registration fee to help offset the costs of swag and lunch.  This fee is scaled by country using the <a href="http://www.economist.com/content/big-mac-index">Big Mac Index</a> and is based on a $25 Fee in the United States.</p>
-          <p>Information about how to apply for travel funding will be released soon. You should go ahead and register before you have received your funding decision.</p>
-          <p><mark>All travel funding has been issued.</mark></p>
-
-          <p><mark>Travel Funding Requests are now being accepted.</mark></p>
-          <p>If you need travel funding for Flock, you may apply using the <a href="https://docs.google.com/forms/d/18BYuHS-91gt5_zaNAskn4-aF5cNimshuZzXu4yo_fz4/">funding request form</a>. You should register for Flock as soon as you know you are likely to attend, even if you are waiting on a funding decision or visa letter. Funding decisions begin being made on 1 June, 2019 and will be made on a continuously rolling basis from then.</p>
-
-          <p>Attendees who registered and paid the registration fee by July 8, 2019 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
-          <p>If you did not register, you are still welcome to attend the conference and events. However, you may not receive benefits such as lunch and a shirt.</p>
--->
+          <p><a href="https://hopin.to/events/nest-with-fedora">Register now</a> for Nest With Fedora. Nest will use the Hopin platform, generously provided by the Apache Software Foundation.</p>
 
         </div>
       </div>
@@ -293,7 +277,7 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Venue and Hotel</h2>
 
-	  <p>Nest With Fedora will be held on an online platform. Details and registration to come.</p>
+	  <p>Nest With Fedora will be held on <a href="https://hopin.to/events/nest-with-fedora">Hopin</a>, generously provided by the Apache Software Foundation.</p>
 <!--
           <div class="col-xs-12 col-md-7">
       <p><a href="https://www.danubiushotels.com/helia">The Danubius Hotel HELIA</a> in Budapest, Hungary is both the conference venue as well as the conference hotel.</p>
