Add Spigot as a sponsor (Minecraft server)

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -359,6 +359,9 @@
           <p>
             <a href="https://www.apache.org/"><img src="../../static/images/sponsors/apache-software-foundation.png"/></a>
           </p>
+          <p>
+            <a href="https://www.spigotmc.org/"><img src="../../static/images/sponsors/spigot.png"/></a>
+          </p>
         </div>
       </div>
       </div>
