Add AWS and Lenovo as gold sponsors per @riecatnor

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -352,6 +352,12 @@
           <p>
             <a href="https://www.opensuse.org/"><img src="../../static/images/opensuse.png"/></a>
           </p>
+           <p>
+            <a href="https://aws.amazon.com/"><img src="../../static/images/sponsors/aws.png"/></a>
+          </p>
+           <p>
+            <a href="https://www.lenovo.com/"><img src="../../static/images/sponsors/lenovo.png"/></a>
+          </p>
           <h3>Bronze Level</h3>
           <p>
             <a href="https://www.datto.com/"><img src="../../static/images/sponsors/Datto-blue-RGB.png"/></a>
