The schedule is now available

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -38,7 +38,7 @@
           <p><strong>Due to COVID-19, we have decided to cancel Flock 2020 in Detroit.</strong> But we still want to do something fun, so we're having <a href="https://communityblog.fedoraproject.org/nest-with-fedora-call-for-ideas/">Nest With Fedora</a>! The safety of our community is the most important thing, and we look forward to getting everyone together in 2021.</p>
 
           <h2>What will we do at Flock?</h2>
-<!--          <p>The <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p> -->
+         <p>The <a href="https://hopin.to/events/nest-with-fedora#schedule">schedule</a> is now available.  Changes are still possible.</p>
           <ul>
               <li align="left"><b>Communicate the Fedora Strategy.</b> Everyone in Fedora should understand and feel well-aligned with the project's goals, both long-term and tactical. We should all understand the messaging we're using to attract new users and contributors.</li>
               <li align="left"><b>Plan the Next Strategy.</b> This strategy doesn't come from the top down, or from thin air, and it's not dictated by our sponsors. It comes from the community. Because we're so big and distributed, Flock can't be the only place where we get new ideas, but it is a summit where we present, learn about, and discuss them.</li>
@@ -57,11 +57,11 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Schedule</h2>
-          <!--
+          
           <p>
-            <strong>The <a href="https://flock2019.sched.com">Flock 2019 schedule</a> is now available!</strong>
+            <strong>The <a href="https://hopin.to/events/nest-with-fedora#schedule">Nest schedule</a> is now available!</strong>
           </p>
-          -->
+          
 
           <h2>Event Dates</h2>
           <p>Nest will begin the morning of Friday, August 7. Sessions will continue each day until Sunday, August 9. <!--You should plan to arrive by Wednesday, August 5 and to depart no sooner than Sunday afternoon for the best experience.--></p>
@@ -167,8 +167,9 @@
             </ul>-->
 
 <!--	      <p>Submit your ideas for Nest With Fedora in the <a href="https://pagure.io/flock/">Flock Pagure repository</a>.</p>-->
+            <p>The CfP is now closed and the <a href="https://hopin.to/events/nest-with-fedora#schedule">schedule</a> is now available.  Changes are still possible.</p>
  <!--
-            <p>The CfP is now closed and the <a href="https://flock2018.sched.com/">schedule</a> is now available.  Changes are still possible.</p>
+
             <p>We invite you to submit proposals for talks (25/50 minutes) or workshops( 2 hours),  or hackfests/FADs (half or full day) on topics of importance to the contributor community.</p>
             <p>Topic ideas include:</p>
             <ul>
