--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -38,7 +38,7 @@
           <p><strong>Due to COVID-19, we have decided to cancel Flock 2020 in Detroit.</strong> But we still want to do something fun, so we're having <a href="https://communityblog.fedoraproject.org/nest-with-fedora-call-for-ideas/">Nest With Fedora</a>! The safety of our community is the most important thing, and we look forward to getting everyone together in 2021.</p>
 
           <h2>What will we do at Flock?</h2>
-         <p>The <a href="https://hopin.to/events/nest-with-fedora#schedule">schedule</a> is now available.  Changes are still possible.</p>
+         <p>The <a href="https://hopin.to/events/nest-with-fedora#schedule">schedule</a> is now available.</p>
           <ul>
               <li align="left"><b>Communicate the Fedora Strategy.</b> Everyone in Fedora should understand and feel well-aligned with the project's goals, both long-term and tactical. We should all understand the messaging we're using to attract new users and contributors.</li>
               <li align="left"><b>Plan the Next Strategy.</b> This strategy doesn't come from the top down, or from thin air, and it's not dictated by our sponsors. It comes from the community. Because we're so big and distributed, Flock can't be the only place where we get new ideas, but it is a summit where we present, learn about, and discuss them.</li>
@@ -167,7 +167,7 @@
             </ul>-->
 
 <!--	      <p>Submit your ideas for Nest With Fedora in the <a href="https://pagure.io/flock/">Flock Pagure repository</a>.</p>-->
-            <p>The CfP is now closed and the <a href="https://hopin.to/events/nest-with-fedora#schedule">schedule</a> is now available.  Changes are still possible.</p>
+            <p>The CfP is now closed and the <a href="https://hopin.to/events/nest-with-fedora#schedule">schedule</a> is now available.</p>
  <!--
 
             <p>We invite you to submit proposals for talks (25/50 minutes) or workshops( 2 hours),  or hackfests/FADs (half or full day) on topics of importance to the contributor community.</p>
@@ -198,7 +198,7 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Registration Information</h2>
-          <p><a href="https://hopin.to/events/nest-with-fedora">Register now</a> for Nest With Fedora. Nest will use the Hopin platform, generously provided by the Apache Software Foundation.</p>
+<!--          <p><a href="https://hopin.to/events/nest-with-fedora">Register now</a> for Nest With Fedora. Nest will use the Hopin platform, generously provided by the Apache Software Foundation.</p>-->
 
         </div>
       </div>
