--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -62,12 +62,12 @@
     </py:otherwise>
   </py:choose>
 
-  <!-- Network Installers -->
+  <!-- Network Installer -->
   <div class="jumbotron main-head hidden-xs hidden-sm">
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
-        <h2>${_('Network Installers')}</h2>
+        <h2>${_('Network Installer')}</h2>
         </div>
       </div>
       <div class="row">
