--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -72,7 +72,7 @@
       </div>
       <div class="row">
         <div class="col-md-3 product-feature">
-        <p>${_('These are very small images you can use to install Fedora over the network.')}</p>
+        <p>${_('These are smaller images you can use to install Fedora over the network.')}</p>
         </div>
         <div class="col-md-9">
           <div class="white">
@@ -137,7 +137,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('These are very small images you can use to install Fedora over the network.')}</p>
+        <p>${_('These are smaller images you can use to install Fedora over the network.')}</p>
         </div>
       </div>
       <div class="row">
@@ -187,7 +187,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('These are very small images you can use to install Fedora over the network.')}</p>
+        <p>${_('These are smaller images you can use to install Fedora over the network.')}</p>
         </div>
       </div>
       <div class="row">
