--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -17,7 +17,7 @@
         <div class="row">
         <div class="col-xs-12 caption no-pad bottom-space">
           <h1 class="text-center">${_('Alternative Downloads')}</h1>
-          <p class="thin text-justify">${_('These Fedora downloads are either special-purpose - for testing, for specific architectures - or are more standard versions of Fedora in alternative formats such network installer format or formatted for bittorrent download.')}</p>
+          <p class="thin text-justify">${_('These Fedora downloads are either special-purpose - for testing, for specific architectures - or are more standard versions of Fedora in alternative formats such network installer format or formatted for torrent download.')}</p>
           <p class="thin text-justify">${_('This page is meant to serve as a single central resource for locating alternative versions of Fedora.')}</p>
         </div>
         </div>
@@ -238,12 +238,12 @@
     <div class="container using">
       <div class="row">
         <div class="col-xs-12">
-        <h2>${_('Bittorrent Downloads')}</h2>
+        <h2>${_('Torrent Downloads')}</h2>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12 product-feature">
-        <p>${_('Fedora offers many bittorrent downloads. Access our directory of torrents below:')}</p>
+        <p>${_('Fedora offers many torrent downloads. Access our directory of torrents below:')}</p>
         </div>
         <div class="col-xs-12 text-center">
         <p><a class="btn btn-lg btn-primary" href="//torrent.fedoraproject.org" role="button">${_('torrent.fedoraproject.org')}</a></p>
