Restore the ARM Fedora Workstation listing
Fixes #1055

--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -183,7 +183,7 @@
         <p>${_('These images are for ARM-based mediacenters, kiosks, laptops, and other ARM-powered devices where a graphical interface is desired.')}</p>
         </div>
         <div class="col-lg-9">
-          <!--<div class="white">
+          <div class="white">
             <div class="col-lg-1">
             <img src="/static/images/workstation.png" />
             </div>
@@ -196,7 +196,7 @@
             <div class="col-lg-4">
             <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Workstation/armhfp/images/Fedora-Workstation-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
             </div>
-	  </div>-->
+	  </div>
           <div class="white">
             <div class="col-lg-1">
             <img src="/static/images/kde.png" />
