KDE Spin: Update for F34 showcased software

--- a/spins.fedoraproject.org/data/content/kde/index.html
+++ b/spins.fedoraproject.org/data/content/kde/index.html
@@ -89,9 +89,9 @@
         <div class="col-md-6 col-xs-12 text-center darkgreybg recover-jumbo">
           <h2>${Markup(_('Office &amp; Productivity Suite'))}</h2>
           <div class="col-md-6 col-xs-12 text-center top-margin">
-          <img src="${path}/static/images/kde/calligra.png" alt="Calligra" />
-          <h4>${_('Calligra')}</h4>
-          <p>${_('Calligra is an integrated office suite built on KDE Platform. It utilizes free and open standards like OpenDocument for its document formats and components.')}</p>
+          <img src="${path}/static/images/kde/libreoffice.png" alt="LibreOffice" />
+          <h4>${_('LibreOffice')}</h4>
+          <p>${_('LibreOffice is a free and powerful office suite. Its clean interface and feature-rich tools help you unleash your creativity and enhance your productivity.')}</p>
         </div>
         <div class="col-md-6 col-xs-12 text-center top-margin">
           <img src="${path}/static/images/kde/okular.png" alt="Okular" />
@@ -111,17 +111,22 @@
         </div>
       </div>
       <div class="row top-margin bottom-margin">
-        <div class="col-md-4 col-xs-12 text-center">
+        <div class="col-md-3 col-xs-12 text-center">
+          <img src="${path}/static/images/kde/elisa.png" alt="Elisa" />
+          <h4>${_('Elisa')}</h4>
+          <p>${_('A simple music player that should be easy to use. It does not require any configuration before one can use it.')}</p>
+        </div>
+        <div class="col-md-3 col-xs-12 text-center">
           <img src="${path}/static/images/kde/dragonplayer.png" alt="Dragon Player" />
           <h4>${_('Dragon Player')}</h4>
           <p>${_('A multimedia player where the focus is on simplicity, instead of features. Its simple interface is designed not to get in your way and instead empower you to simply play multimedia files.')}</p>
         </div>
-        <div class="col-md-4 col-xs-12 text-center">
+        <div class="col-md-3 col-xs-12 text-center">
           <img src="${path}/static/images/kde/k3b.png" alt="K3B" />
           <h4>${_('K3B')}</h4>
           <p>${_('K3B allows you to easily back up your multimedia files as it\'s a full featured CD/DVD writing software. K3B supports writing data CDs/DVDs, audio CDs, video CDs, DVDs, copying, CD ripping and more.')}</p>
         </div>
-        <div class="col-md-4 col-xs-12 text-center">
+        <div class="col-md-3 col-xs-12 text-center">
           <img src="${path}/static/images/kde/gwenview.png" alt="Gwenview" />
           <h4>${_('Gwenview')}</h4>
           <p>${_('Gwenview is able to load and save to a variety of image formats, such as PNG and JPEG. Its simple interface does not get in the way and lets you view your images quickly and easily.')}</p>
