alt/cloud: Include GCP download
This PR is for https://pagure.io/cloud-sig/issue/314

--- a/alt.fedoraproject.org/data/content/cloud/index.html
+++ b/alt.fedoraproject.org/data/content/cloud/index.html
@@ -267,6 +267,101 @@
   <div class="white-hr"></div>
   <!-- end Vagrant -->
 
+
+  <!-- GCP -->
+  <!-- Desktop -->
+  <div class="jumbotron main-head hidden-xs hidden-sm hidden-md">
+    <div class="container using">
+      <div class="row">
+        <div class="col-lg-12 top-margin">
+          <h2>${_('Fedora %(rel)s Cloud Base Images for Google Cloud Platform (GCP)') % {'rel':global_variables.release['curr_id']}}</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 product-feature">
+          <p>${_('This image is configured to boot on GCP. To create a disk from the compressed image, see')}
+            <a href="https://cloud.google.com/compute/docs/import/import-existing-image#console">${_('GCP\'s documentation')}</a>${_('.')}
+          </p>
+        </div>
+      </div>
+        <div class="white">
+          <div class="col-lg-1">
+            <img src="/static/images/cloud.png" />
+          </div>
+          <div class="col-lg-5">
+            <h3>${_('Compressed disk image')}</h3>
+          </div>
+          <div class="col-lg-2">
+            <p>${Markup(_('%sMB tar.gz')) % global_variables.iso_size['GCP_x86_64_tar']}</p>
+          </div>
+          <div class="col-lg-4">
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Cloud/x86_64/images/Fedora-Cloud-Base-GCP-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.tar.gz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <!-- Mobile phones-->
+  <div class="jumbotron main-head visible-xs">
+    <div class="container using">
+      <div class="row">
+        <div class="col-xs-12">
+          <h2>${_('Fedora %(rel)s Cloud Base Images for Google Cloud Platform (GCP)') % {'rel':global_variables.release['curr_id']}}</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 product-feature">
+          <p>${_('This image is configured to boot on GCP. To create a disk from the compressed image, see')}
+            <a href="https://cloud.google.com/compute/docs/import/import-existing-image#console">${_('GCP\'s documentation')}</a>${_('.')}
+          </p>
+        </div>
+      </div>
+        <div class="white">
+          <div class="col-xs-3">
+            <img src="/static/images/cloud.png" />
+          </div>
+          <div class="col-xs-9">
+            <h3>${_('Compressed disk image')}</h3>
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Cloud/x86_64/images/Fedora-Cloud-Base-GCP-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.tar.gz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  <!-- Tablets-->
+  <div class="jumbotron main-head hidden-xs hidden-lg">
+    <div class="container using">
+      <div class="row">
+        <div class="col-sm-12">
+          <h2>${_('Fedora %(rel)s Cloud Base Images for Google Cloud Platform (GCP)') % {'rel':global_variables.release['curr_id']}}</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 product-feature">
+          <p>${_('This image is configured to boot on GCP. To create a disk from the compressed image, see')}
+            <a href="https://cloud.google.com/compute/docs/import/import-existing-image#console">${_('GCP\'s documentation')}</a>${_('.')}
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="white">
+          <div class="col-sm-3">
+            <img src="/static/images/cloud.png" />
+          </div>
+          <div class="col-sm-5">
+            <h3>${_('Compressed disk image')}</h3>
+          </div>
+          <div class="col-sm-4">
+            <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Cloud/x86_64/images/Fedora-Cloud-Base-GCP-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}.x86_64.tar.gz">${_('Download')}</a> | <a href="${path}/${lang}/verify.html">${_('Verify')}</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="white-hr"></div>
+  <!-- end GCP -->
+
   <!-- EC2 AMI IDs -->
     <!-- Desktop -->
   <div class="jumbotron main-head hidden-xs">
