--- a/alt.fedoraproject.org/data/content/index.html
+++ b/alt.fedoraproject.org/data/content/index.html
@@ -448,7 +448,7 @@
             <h3>${_('Nightly builds')}</h3>
             </div>
             <div class="col-lg-4 col-lg-offset-1">
-            <p class="download"><a href="https://www.happyassassin.net/nightlies.html">${Markup(_('View Images &gt;'))}</a></p>
+            <p class="download"><a href="https://openqa.fedoraproject.org/nightlies.html">${Markup(_('View Images &gt;'))}</a></p>
             </div>
           </div>
           <div class="white">
@@ -487,7 +487,7 @@
           </div>
           <div class="col-xs-9">
           <h3>${_('Nightly builds')}</h3>
-          <p class="download"><a href="https://www.happyassassin.net/nightlies.html">${Markup(_('View Images &gt;'))}</a></p>
+          <p class="download"><a href="https://openqa.fedoraproject.org/nightlies.html">${Markup(_('View Images &gt;'))}</a></p>
           </div>
         </div>
         <div class="white">
@@ -525,7 +525,7 @@
           <h3>${_('Nightly builds')}</h3>
           </div>
           <div class="col-sm-4">
-          <p class="download"><a href="https://www.happyassassin.net/nightlies.html">${Markup(_('View Images &gt;'))}</a></p>
+          <p class="download"><a href="https://openqa.fedoraproject.org/nightlies.html">${Markup(_('View Images &gt;'))}</a></p>
           </div>
         </div>
         <div class="white">
