--- a/spins.fedoraproject.org/data/content/lxqt/index.html
+++ b/spins.fedoraproject.org/data/content/lxqt/index.html
@@ -158,7 +158,7 @@
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
-          <p>${Markup(_('Specific documentation and tutorials are available at the &lt;a href="%s"&gt;LXQt project upstream website&lt;/a&gt;.') % ('http://lxqt.org/'))}</p>
+          <p>${Markup(_('Specific documentation and tutorials are available at the &lt;a href="%s"&gt;LXQt project upstream website&lt;/a&gt;.') % ('https://lxqt-project.org/'))}</p>
         </div>
       </div>
       <div class="row top-margin">
