feat(compneuro): add 3 more featured apps
Signed-off-by: Ankur Sinha (Ankur Sinha Gmail) <sanjay.ankur@gmail.com>

--- a/labs.fedoraproject.org/data/content/comp-neuro/index.html
+++ b/labs.fedoraproject.org/data/content/comp-neuro/index.html
@@ -86,36 +86,62 @@
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/comp-neuro/genesis.gif" alt="GENESIS logo" />
-          	<h4>${_('GENESIS')}</h4>
+            <img src="${path}/static/images/comp-neuro/genesis.gif" alt="GENESIS logo" />
+            <h4>${_('GENESIS')}</h4>
             <p>${_('Model subcellular components, biochemical reactions, complex models of single neurons, and networks.')}</p>
-          	<a href="http://genesis-sim.org/GENESIS/">${Markup(_('Learn More &gt;'))}</a>
+            <a href="http://genesis-sim.org/GENESIS/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
       </div>
       <div class="row top-margin bottom-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/comp-neuro/nest.png" alt="NEST logo" />
-          	<h4>${_('NEST')}</h4>
+            <img src="${path}/static/images/comp-neuro/nest.png" alt="NEST logo" />
+            <h4>${_('NEST')}</h4>
             <p>${_('A simulation environment for modelling large scale spiking neural networks.')}</p>
-          	<a href="https://www.nest-simulator.org/">${Markup(_('Learn More &gt;'))}</a>
+            <a href="https://www.nest-simulator.org/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-          	<img src="${path}/static/images/comp-neuro/scipy.webp" alt="SciPy logo" />
-          	<h4>${_('SciPy')}</h4>
+            <img src="${path}/static/images/comp-neuro/scipy.webp" alt="SciPy logo" />
+            <h4>${_('SciPy')}</h4>
             <p>${_('The complete Python Science stack, for teaching, modelling, and analysis.')}</p>
-          	<a href="https://www.scipy.org/">${Markup(_('Learn More &gt;'))}</a>
+            <a href="https://www.scipy.org/">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-	      	<img src="${path}/static/images/comp-neuro/moose.png" alt="MOOSE Logo" />
-          	<h4>${_('MOOSE')}</h4>
+          <img src="${path}/static/images/comp-neuro/moose.png" alt="MOOSE Logo" />
+            <h4>${_('MOOSE')}</h4>
             <p>${_('Simulate stochastic chemical computations, multicompartment single-neuron models, and spiking neuron network models.')}</p>
-          	<a href="https://moose.ncbs.res.in/">${Markup(_('Learn More &gt;'))}</a>
+            <a href="https://moose.ncbs.res.in/">${Markup(_('Learn More &gt;'))}</a>
+          </div>
+        </div>
+      </div>
+      <div class="row top-margin bottom-margin">
+        <div class="col-md-4 col-xs-12 text-center">
+          <div class="border">
+            <img src="${path}/static/images/comp-neuro/neuroml.png" alt="NeuroML logo" style="width: 80%;"/>
+            <h4>${_('NeuroML')}</h4>
+            <p>${_('A Model Description Language for Computational Neuroscience.')}</p>
+            <a href="https://www.neuroml.org/">${Markup(_('Learn More &gt;'))}</a>
+          </div>
+        </div>
+        <div class="col-md-4 col-xs-12 text-center">
+          <div class="border">
+            <img src="${path}/static/images/comp-neuro/pynn.png" alt="PyNN logo" style="width: 15%;"/>
+            <h4>${_('PyNN')}</h4>
+            <p>${_('A Python package for simulator-independent specification of neuronal network models.')}</p>
+            <a href="https://pynn.readthedocs.io/en/latest/">${Markup(_('Learn More &gt;'))}</a>
+          </div>
+        </div>
+        <div class="col-md-4 col-xs-12 text-center">
+          <div class="border">
+          <img src="${path}/static/images/comp-neuro/netpyne.png" alt="NetPyNE Logo" style="width: 70%"/>
+            <h4>${_('NetPyNE')}</h4>
+            <p>${_('Develop, simulate, parallelize, analyze, and optimize biological neuronal networks using the NEURON simulator.')}</p>
+            <a href="https://netpyne.org">${Markup(_('Learn More &gt;'))}</a>
           </div>
         </div>
       </div>
