--- a/labs.fedoraproject.org/data/content/comp-neuro/index.html
+++ b/labs.fedoraproject.org/data/content/comp-neuro/index.html
@@ -70,7 +70,7 @@
       <div class="row top-margin bottom-margin">
         <div class="col-md-4 col-xs-12 text-center">
           <div class="border">
-            <img src="${path}/static/images/comp-neuro/neuron-logo.png" alt="Neuron logo" />
+            <img src="${path}/static/images/comp-neuro/neuron-logo.png" alt="Neuron logo" style="width: 80%;"/>
             <h4>${Markup(_('Neuron'))}</h4>
             <p>${_('A simulation environment for detailed modelling of individual neurons and networks of neurons.')}</p>
             <a href="https://neuron.yale.edu/neuron/">${Markup(_('Learn More &gt;'))}</a>
