Add i3 banner and Fedora Docs
Signed-off-by: Ben Cotton <bcotton@fedoraproject.org>

--- a/spins.fedoraproject.org/data/content/i3/index.html
+++ b/spins.fedoraproject.org/data/content/i3/index.html
@@ -158,7 +158,7 @@
         </div>
         <div class="col-md-4 col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
-          <p>${Markup(_('Specific documentation and tutorials are available at the &lt;a href="%s"&gt;i3 project upstream website&lt;/a&gt;.') % ('https://i3wm.org/'))}</p>
+          <p>${Markup(_('Specific documentation and tutorials are available in &lt;a href="%s"&gt;Fedora Docs&lt;/a&gt; and the &lt;a href="%s"&gt;i3 project upstream website&lt;/a&gt;.') % ('https://docs.fedoraproject.org/en-US/i3/', 'https://i3wm.org/'))}</p>
         </div>
       </div>
       <div class="row top-margin">
