Comment out the application content copied in
The i3 SIG has not provided usable content for this yet.

Signed-off-by: Ben Cotton <bcotton@fedoraproject.org>

--- a/spins.fedoraproject.org/data/content/i3/index.html
+++ b/spins.fedoraproject.org/data/content/i3/index.html
@@ -36,7 +36,7 @@
   </div>
 
   <!-- Going Online -->
-  <div class="jumbotron darkbluebox">
+<!--  <div class="jumbotron darkbluebox">
     <div class="container">
       <div class="row">
         <div class="col-xs-12 text-center">
@@ -66,10 +66,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
     <!-- Utilities and Office -->
-  <div class="jumbotron jumbotron-full">
+<!--  <div class="jumbotron jumbotron-full">
     <div class="container-full">
         <div class="col-md-6 col-xs-12 text-center greybg recover-jumbo">
           <h2>${Markup(_('Utilities &amp; Configuration'))}</h2>
@@ -98,10 +98,10 @@
         </div>
         </div>
     </div>
-  </div>
+  </div>-->
 
   <!-- Multimedia -->
-  <div class="jumbotron whitebox">
+<!--  <div class="jumbotron whitebox">
     <div class="container">
       <div class="row top-margin">
         <div class="col-xs-12 text-center">
@@ -126,10 +126,10 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
   <!-- Download -->
-  <div class="jumbotron product-feature">
+<!--  <div class="jumbotron product-feature">
     <div class="container using">
       <div class="row">
         <div class="col-xs-12 text-center spin-download">
@@ -137,7 +137,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
   <!-- Resources -->
   <div class="jumbotron greybox">
