--- a/spins.fedoraproject.org/data/content/prerelease.html
+++ b/spins.fedoraproject.org/data/content/prerelease.html
@@ -190,6 +190,29 @@
   	  	  </div>
        </div>
 
+
+       <div class="high">
+    	  <div class="row top-margin bottom-space">
+    	   <div class="col-xs-12 pre-box">
+    	  	<div class="col-xs-12 col-sm-4 text-center no-leftpadding">
+    	  	  <img class="screenshot image-responsive" src="${path}/static/images/screenshots/screenshot-i3.jpg" alt="i3 Screenshot" />
+    	  	</div>
+    	  	<div class="col-xs-12 col-sm-8 text-left">
+    	  	  <p class="screenshot"><img src="${path}/static/images/i3-pre-banner.png" alt="i3 banner" /><br />
+    	  	  <span class="grey">${_('Tiling window manager')}</span></p>
+    	  	  	<div class="col-xs-6 text-center">
+    	  	  		<a class="btn btn-success btn-pre" href="${global_variables.path['download']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/x86_64/iso/Fedora-i3-Live-x86_64-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">64-bit image</a>
+    	  	  		<h5>${_('ISO image')}</h5>
+  	  	  		</div>
+  	  	  		<div class="col-xs-6 text-center">
+   	  	  		<!-- <a class="btn btn-success btn-pre" href="${global_variables.path['download_arch']}/test/${global_variables.release['next_id']}_${global_variables.release['curr_state']}/Spins/i386/iso/Fedora-SoaS-Live-i386-${global_variables.release['next_id']}_${global_variables.release['curr_state']}-${global_variables.release['RC_pre_gold']}.iso" role="button">32-bit image</a> -->
+    	  	  		<!-- <h5>${Markup(_('%s MB ISO Image')) % global_variables.iso_size['pre_i686_Live_Soas']}</h5> -->
+  	  	  		</div>
+  	  	  	</div>
+  	  	   </div>
+  	  	  </div>
+       </div>
+
     </div>
   </header>
 
