--- a/spins.fedoraproject.org/data/content/i3/index.html
+++ b/spins.fedoraproject.org/data/content/i3/index.html
@@ -36,70 +36,111 @@
   </div>
 
   <!-- Going Online -->
-<!--  <div class="jumbotron darkbluebox">
+  <div class="jumbotron darkbluebox">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 text-center">
+        <div class="col-xs-12 text-center top-margin">
           <h2>${_('Going Online')}</h2>
         </div>
       </div>
       <div class="row top-margin bottom-margin">
-        <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/lxqt/nm.png" alt="NetworkManager" />
-          <h4>${_('NetworkManager')}</h4>
-          <p>${_('The goal of NetworkManager is to make networking just work with a minimum of user hassle, but still allow customization.')}</p>
+        <div class="col-md-4 col-xs-12 text-center">
+          <img src="${path}/static/images/i3/firefox.png" alt="Firefox" />
+          <h4>${_('Firefox')}</h4>
+          <p>${_('The popular and free web browser backed by Mozilla, a non-profit dedicated to internet health and privacy.')}</p>
         </div>
-        <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/lxqt/qupzilla.png" alt="QupZilla" />
-          <h4>${_('QupZilla')}</h4>
-          <p>${_('A lightweight multiplatform web browser written in Qt Framework and using its web rendering engine QtWebEngine.')}</p>
+        <div class="col-md-4 col-xs-12 text-center">
+          <img src="${path}/static/images/i3/nm.png" alt="NetworkManager" />
+          <h4>${_('NetworkManager Applet')}</h4>
+          <p>${_('Just a click and you\'re connected to your wireless LAN router, or online via many supported 3G mobile broadband cards.')}</p>
         </div>
-        <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/lxqt/quassel.png" alt="Quassel" />
-          <h4>${_('Quassel')}</h4>
-          <p>${_('Quassel IRC is a modern, cross-platform, distributed IRC client, meaning that one clients can attach to and detach from a central core')}</p>
-        </div>
-        <div class="col-md-3 col-xs-12 text-center">
-          <img src="${path}/static/images/lxqt/transmission.png" alt="Transmission" />
-          <h4>${_('Transmission')}</h4>
-          <p>${_('Are you a downloader? Use Transmission to get new versions of Fedora LXQt Desktop!')}</p>
+        <div class="col-md-4 col-xs-12 text-center">
+          <img src="${path}/static/images/i3/terminal.png" alt="terminal" />
+          <h4>${_('nmcli')}</h4>
+          <p>${_('CLI application to control the NetworkManager configuration. It gives you the power of the nm-applet, but in the terminal.')}</p>
         </div>
       </div>
     </div>
-  </div>-->
+  </div>
 
-    <!-- Utilities and Office -->
-<!--  <div class="jumbotron jumbotron-full">
-    <div class="container-full">
-        <div class="col-md-6 col-xs-12 text-center greybg recover-jumbo">
-          <h2>${Markup(_('Utilities &amp; Configuration'))}</h2>
-	          <div class="col-md-6 col-xs-12 text-center top-margin">
-	          <img src="${path}/static/images/lxqt/qterminal.png" alt="QTerminal" />
-          	  <h4>${_('QTerminal')}</h4>
-          	  <p>${_('QTerminal is a lightweight Qt terminal emulator based on QTermWidget.')}</p>
-	        </div>
-	        <div class="col-md-6 col-xs-12 text-center top-margin">
-	          <img src="${path}/static/images/lxqt/dnfdragora.png" alt="dnfdragora" />
-          	  <h4>${_('dnfdragora')}</h4>
-          	  <p>${_('dnfdragora is a DNF frontend, based on rpmdragora, written in Python 3 and uses libYui.')}</p>
-	        </div>
+  <!-- Configuration -->
+  <div class="jumbotron greybox">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 text-center top-margin">
+          <h2>${_('Configuration')}</h2>
         </div>
-        <div class="col-md-6 col-xs-12 text-center darkgreybg recover-jumbo">
-          <h2>${Markup(_('Office &amp; Productivity Suite'))}</h2>
-          <div class="col-md-6 col-xs-12 text-center top-margin">
-          <img src="${path}/static/images/lxqt/featherpad.png" alt="FeatherPad" />
-          <h4>${_('FeatherPad')}</h4>
-          <p>${_('FeatherPad is a desktop indipendent and lightweight Qt5 plain-text editor for Linux.')}</p>
+      </div>
+      <div class="row top-margin bottom-margin">
+        <div class="col-md-4 col-xs-12 text-center">
+	          <img src="${path}/static/images/i3/terminal.png" alt="terminal" />
+          <h4>${_('rxvt-unicode')}</h4>
+          <p>${_('Also known as urxvt, it\'s a lightweight terminal emulator fully customizable.')}</p>
         </div>
-        <div class="col-md-6 col-xs-12 text-center top-margin">
-          <img src="${path}/static/images/lxqt/qpdfview.png" alt="qpdfview" />
-          <h4>${_('qpdfview')}</h4>
-          <p>${_('qpdfview is a tabbed document viewer.')}</p>
+        <div class="col-md-4 col-xs-12 text-center">
+	          <img src="${path}/static/images/i3/terminal.png" alt="terminal" />
+          <h4>${_('brightlight')}</h4>
+          <p>${_('brightlight gets and sets the screen back-light brightness on Linux systems using the kernel sysfs interface.')}</p>
         </div>
+        <div class="col-md-4 col-xs-12 text-center">
+          <img src="${path}/static/images/i3/azote.png" alt="azote" />
+          <h4>${_('azote')}</h4>
+          <p>${_('A GTK+3-based picture browser and background setter.')}</p>
         </div>
+      </div>
     </div>
-  </div>-->
-
+  </div>
+  
+  <!-- Utilities -->
+  <div class="jumbotron whitebox">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 text-center top-margin">
+          <h2>${_('Utilities')}</h2>
+        </div>
+      </div>
+      <div class="row top-margin bottom-margin">
+        <div class="col-md-3 col-xs-12 text-center">
+	          <img src="${path}/static/images/i3/terminal.png" alt="terminal" />
+          <h4>${_('i3lock')}</h4>
+          <p>${_('Simple screen locker')}</p>
+        </div>
+        <div class="col-md-3 col-xs-12 text-center">
+	          <img src="${path}/static/images/i3/terminal.png" alt="terminal" />
+          <h4>${_('i3status')}</h4>
+          <p>${_('Small program for generating a status bar for i3bar, dzen2, xmobar or similar programs')}</p>
+        </div>
+        <div class="col-md-3 col-xs-12 text-center">
+	          <img src="${path}/static/images/i3/terminal.png" alt="terminal" />
+          <h4>${_('dmenu')}</h4>
+          <p>${_('Dynamic menu for X11')}</p>
+        </div>
+        <div class="col-md-3 col-xs-12 text-center">
+	          <img src="${path}/static/images/i3/terminal.png" alt="terminal" />
+          <h4>${_('dunst')}</h4>
+          <p>${_('Highly-configurable and lightweight notification daemon')}</p>
+        </div>
+      </div>
+      <div class="row top-margin bottom-margin">
+        <div class="col-md-4 col-xs-12 text-center">
+	          <img src="${path}/static/images/i3/htop.png" alt="htop" />
+          <h4>${_('htop')}</h4>
+          <p>${_('Interactive process viewer')}</p>
+        </div>
+        <div class="col-md-4 col-xs-12 text-center">
+	          <img src="${path}/static/images/i3/mousepad.png" alt="mousepad" />
+          <h4>${_('mousepad')}</h4>
+          <p>${_('Simple text editor for the Xfce desktop environment')}</p>
+        </div>
+        <div class="col-md-4 col-xs-12 text-center">
+	          <img src="${path}/static/images/i3/thunar.png" alt="thunar" />
+          <h4>${_('Thunar')}</h4>
+          <p>${_('file manager for Linux and other Unix-like systems')}</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
   <!-- Multimedia -->
 <!--  <div class="jumbotron whitebox">
     <div class="container">
