--- a/spins.fedoraproject.org/data/content/index.html
+++ b/spins.fedoraproject.org/data/content/index.html
@@ -149,6 +149,20 @@
   	  	  </div>
   	    </div>
 	     </div>
+
+       <div class="high">
+    	  <div class="row">
+    	  	<div class="col-xs-10 col-xs-offset-1 text-center top-space">
+    	  	  <a href="/${lang}/i3"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-i3.jpg" alt="i3 Screenshot" /></a>
+    	  	</div>
+    	  </div>
+    	  <div class="row">
+    	  	<div class="col-xs-10 col-xs-offset-1 text-center bottom-space">
+    	  	  <p class="screenshot bottom-border"><a href="/${lang}/i3"><img class="spin-banner" src="${path}/static/images/i3-banner.png" alt="i3 banner" /></a><br />
+    	  	  <span class="grey">${_('Tiling window manager.')}</span></p>
+  	  	  </div>
+  	    </div>
+	     </div>
      </div>
   	</div>
   </header>
